# PythonBaseProject

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  project-setup.sh  project_config.toml  pyproject.toml  requirements-dev.txt  setup.py
app/: __init__.py
assets/: project_config.toml
src/: __init__.py
templates/: Makefile  README.md  project_config.toml
