[project]
name = "python-base-project"
version = "0.1.0"
description = "Type here the description for your project."
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "pre-commit>=4.0.1",
    "python-dotenv==1.0.1",
]

[tool.uv]
dev-dependencies = [
    "black==24.10.0",
    "isort==5.13.2",
    "pyright>=1.1.388",
    "pytest==8.3.3",
    "ruff==0.7.1",
    "typos==1.26.8",
]

[tool.ruff]
src = ["app"]
line-length = 120
show-fixes = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001", "TCH001", "G002"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10

[tool.pyright]
include = ["src"]  # Adjust this to your source directory
exclude = [
    "**/.venv",
    "**/__pycache__",
    "**/tests"
]
typeCheckingMode = "strict"  # For strictest type checking
reportMissingTypeStubs = true
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownLambdaType = true
reportUnknownVariableType = true
reportUnknownMemberType = true
reportMissingTypeArgument = true
reportInvalidTypeVarUse = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportCallInDefaultInitializer = true
reportPropertyTypeMismatch = true
reportWildcardImportFromLibrary = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true

[tool.isort]
py_version=311
multi_line_output = 3
line_length = 120

[tool.black]
line-length = 120
target-version = ['py311']
